# tp-five-pm-musice-to-emotion

./: .gitignore  README.md  pyproject.toml
preprocessing/: mtat_read.py
training/: fine_tune.py  main.py  model.py  solver.py
training/data_loader/: labelstudio_loader.py
